--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -4,4 +4,12 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
+    flex-direction: column;
+}
+.scheduleNow{
+    background-color: purple;
+    border-radius: 5px;
+    height: 50px;
+    width: 100px;
+    color: white;
 }
