--- a/src/app/components/schedulingCalendar/schdeulingCalendar.module.css
+++ b/src/app/components/schedulingCalendar/schdeulingCalendar.module.css
@@ -1,8 +1,9 @@
+
 .calendar{
     
 }
 .scheduleButton{
-    background-color: purple;
+    background-color: rgb(128, 0, 128);
     border-radius: 5px;
     height: 50px;
     width: 100px;
