--- a/src/app/senate/currentAgendas/currentAgendas.module.css
+++ b/src/app/senate/currentAgendas/currentAgendas.module.css
@@ -1,7 +1,28 @@
 .currentAgendas{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100vw;
+}
+.sections{
+    display: flex;
+    flex-direction: column;
+    width:80%;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 30px 25px;
+    height: 60vh;
+    max-width: 800px;
+    margin-top:20px;
+}
+.content {
+    overflow-y: auto;  /* Make this section scrollable */
+    flex-grow: 1;  /* Allow the content to take as much space as needed but not exceed the viewport */
+    scrollbar-width:none;
+}
+.currentAgendas h1{
+    font-size: 45px;
 }
