--- a/src/app/senate/pastAgendas/pastAgendas.module.css
+++ b/src/app/senate/pastAgendas/pastAgendas.module.css
@@ -1,7 +1,37 @@
 .pastAgendas{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100vw;
+}
+.sections{
+    display: flex;
+    flex-direction: column;
+    width:80%;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 30px 25px;
+    height: 60vh;
+    max-width: 800px;
+    margin-top:5px;
+}
+.content {
+    overflow-y: auto;  /* Make this section scrollable */
+    flex-grow: 1;  /* Allow the content to take as much space as needed but not exceed the viewport */
+    scrollbar-width:none;
+}
+.pastAgendas h1{
+    font-size: 30px;
+    font-weight: bolder;
+}
+.top{
+    display: flex;
+    width: 80%;
+    max-width: 800px;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 0px 10px;
 }
