--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   max-width: 100vw;
+  background-color: #FFFFFF;
 }
 .page{
   justify-self: center;
