--- a/src/app/senate/currentAgendas/currentAgendas.module.css
+++ b/src/app/senate/currentAgendas/currentAgendas.module.css
@@ -5,19 +5,18 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
-
+    padding-left: 250px;
+    transition: padding-left 0.3s ease-in-out;
 }
 .sections{
     display: flex;
     flex-direction: column;
-    width:95%;
-    background-color: #ffffff;
+    width: calc(100vw - 300px); 
     border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     padding: 30px 25px;
     height: 60vh;
-    max-width: 800px;
-    margin-top:5px;
+    margin: 0px auto;
+    width: 100%;
 }
 .content {
     overflow-y: auto;  /* Make this section scrollable */
@@ -30,9 +29,15 @@
 }
 .top{
     display: flex;
-    width: 90%;
-    max-width: 800px;
+    width: calc(100vw - 300px);
     justify-content: space-between;
     align-items: baseline;
-    padding: 0px 10px;
+    padding: 0px 50px;
+    margin: 0 auto;
+    width: 100%;
+}
+@media screen and (max-width: 800px) {
+    .currentAgendas{
+        padding-left: 0;
+    }
 }
