--- a/src/app/senate/pastAgendas/pastAgendas.module.css
+++ b/src/app/senate/pastAgendas/pastAgendas.module.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     width: calc(100vw - 300px);
     border-radius: 10px;
-    padding: 30px 25px;
+    padding: 0 25px;
     height: 60vh;
     margin: 0px auto;
     width: 100%;
@@ -26,6 +26,7 @@
 .pastAgendas h1{
     font-size: 30px;
     font-weight: bolder;
+    margin-top: 30;
 }
 .top{
     display: flex;
@@ -35,6 +36,22 @@
     padding: 0px 50px;
     margin: 0 auto;
     width: 100%;
+}
+.labels{
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+    padding-left: 20px;
+    width: 100%;
+    background-color: #e4e4e44f;
+    height: 35px;
+    align-items: center;
+    border-radius: 5px;
+}
+.rightLabels{
+    display: flex;
+    gap:12px;
+    margin-right: 75px;
 }
 @media screen and (max-width: 800px) {
     .pastAgendas{
