--- a/src/app/senate/currentAgendas/currentAgendas.module.css
+++ b/src/app/senate/currentAgendas/currentAgendas.module.css
@@ -6,7 +6,8 @@
     height: 100vh;
     width: 100vw;
     padding-left: 250px;
-    transition: padding-left 0.3s ease-in-out;
+    transition: padding 0.3s ease-in-out;
+    padding-right: 10%;
 }
 .sections{
     display: flex;
@@ -33,7 +34,7 @@
     width: calc(100vw - 300px);
     justify-content: space-between;
     align-items: baseline;
-    padding: 0px 50px;
+    padding: 0px 30px;
     margin: 0 auto;
     width: 100%;
 }
@@ -54,8 +55,8 @@
     margin-right: 175px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1024px) {
     .currentAgendas{
-        padding-left: 0;
+        padding: 0;
     }
 }
