--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     flex-direction: column;
 }
 .navButton{
@@ -12,4 +12,11 @@
     height: 50px;
     width: 100px;
     color: white;
+}
+.profileSection{
+    position: absolute;
+    display: flex;
+    right: 80px;
+    top:40px;
+    z-index: 600;
 }
