senate role buttons

--- a/src/app/components/agendaSection/agendaSection.module.css
+++ b/src/app/components/agendaSection/agendaSection.module.css
@@ -45,6 +45,7 @@
   text-overflow: ellipsis; /* Show ellipsis when the text overflows */
   white-space: nowrap; /* Prevent text wrapping */
   max-width: 20vw;
+  margin-right: 15px
 }
 .buttons button {
   display: flex;
