implemented sort filtering mechanism

--- a/src/app/components/agendaSection/agendaSection.module.css
+++ b/src/app/components/agendaSection/agendaSection.module.css
@@ -34,6 +34,9 @@
   border: 0.1px solid #48316F;
   border-radius: 7px;
 }
+.date{ 
+  margin-right:5%
+}
 .buttons{
   display: flex;
   align-items: center;
