--- a/src/app/attorney/dashboard/attorney.module.css
+++ b/src/app/attorney/dashboard/attorney.module.css
@@ -1,7 +1,14 @@
-.attorneyPage{
+.attorneyPage {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+  }
+  
+  .contentArea {
+    flex: 1;
+    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
-}
+  }
+  
