--- a/src/app/senate/dashboard/pastAgendas/pastAgendas.module.css
+++ b/src/app/senate/dashboard/pastAgendas/pastAgendas.module.css
@@ -39,7 +39,9 @@
     width: 100%;
 }
 .labels{
-    display: flex;
+    /* display: flex; */
+    display: grid;
+    grid-template-columns: 8fr 1fr 1fr;
     justify-content: space-between;
     font-size: 15px;
     padding-left: 20px;
@@ -51,10 +53,18 @@
 }
 .rightLabels{
     display: flex;
-    gap:80px;
-    margin-left: auto;
-    margin-right: 5px;
-
+    align-items: center;
+    gap: 10px;
+    width: 15vw;
+    min-width: 160px;
+}
+.rightLabels label {
+    margin-left: -20px;
+}
+.date{
+    margin-right:5%;
+    width: 10vw;
+    margin-right: 30px;
 }
 .labels button {
     display: flex;
@@ -64,10 +74,16 @@
     color: white;
     height: 100%;
     width: 70px;
-    margin-right: 5px;
+    margin-left: auto;
+    margin-right: 10px;
 }
 @media screen and (max-width: 1024px) {
     .pastAgendas{
         padding: 0;
+    }
+}
+@media screen and (max-width: 600px) {
+    .date{
+        display: none;
     }
 }
