--- a/src/app/components/pieChart/pieChart.module.css
+++ b/src/app/components/pieChart/pieChart.module.css
@@ -46,7 +46,7 @@ body.active-modal {
     z-index: 100;
     gap: 20;
     /* padding-top: 50 ; */
-    max-width: 800;
+    max-width: 800px;
     padding-bottom: 100;
     height: 60vh;
 
