button path fixes and addAgenda ui changes

--- a/src/app/components/details/details.module.css
+++ b/src/app/components/details/details.module.css
@@ -47,7 +47,7 @@ body.active-modal {
     gap: 20;
     /* padding-top: 50 ; */
     max-width: 800px;
-    padding-bottom: 70;
+    padding-bottom: 70px;
     height: 60vh;
     
 }
