--- a/src/app/components/addAgenda/addAgenda.module.css
+++ b/src/app/components/addAgenda/addAgenda.module.css
@@ -47,7 +47,7 @@ body.active-modal {
     width: 80vw;
     /* padding-top: 50 ; */
     max-width: 800px;
-    padding-bottom: 100;
+    padding-bottom: 100px;
 
 }
 
@@ -100,7 +100,7 @@ body.active-modal {
     flex-direction: column;
     background-color: #dddddd;
     /* background-color: #548858; */
-    width: 400;
+    width: 400px;
     /* margin-left: auto; */
     /* height: 350px; */
     margin-top: 50px;
@@ -122,7 +122,7 @@ body.active-modal {
     padding: 10px;
 }
 .content::-webkit-scrollbar {
-    width: 0; /* Hide the scrollbar by default */
+    width: 0px; /* Hide the scrollbar by default */
   }
 .content:hover::-webkit-scrollbar {
     width: 6px; /* Show the scrollbar when hovering */
@@ -133,7 +133,7 @@ body.active-modal {
     background-color: rgb(255, 255, 255);
     height: 30px;
     align-items: center;
-    padding: 0 10;
+    padding: 0px 10px;
 
 }
 .option span{
