--- a/src/app/components/searchBar/SearchBar.module.css
+++ b/src/app/components/searchBar/SearchBar.module.css
@@ -4,7 +4,6 @@
     background-color: white;
     border-radius: 5px;
     padding: 5px 10px;
-    width: 250px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
   
@@ -14,5 +13,6 @@
     border: none;
     outline: none;
     font-size: 16px;
+    height: 30px;
   }
   
