--- a/src/app/senate/dashboard/pastAgendas/pastAgendas.module.css
+++ b/src/app/senate/dashboard/pastAgendas/pastAgendas.module.css
@@ -38,10 +38,18 @@
     margin: 0 auto;
     width: 100%;
 }
+.pageChange button{
+    all: unset;
+    font-size: 40px;
+    text-align: start;
+    border: 0;
+
+}
 .searchAddContainer {
     display: flex;
     align-items: center;
     gap: 10px; /* Adjusts space between elements */
+    margin-bottom: 10px;
 }
 
 .labels{
@@ -59,30 +67,10 @@
 }
 .rightLabels{
     display: flex;
-
     gap:12px;
     margin-right: 75px;
-
-}
-.sortButton {
-    padding: 8px 12px;
-    background-color: Purple; /* Maverick Purple */
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: bold;
-    transition: background-color 0.2s ease-in-out;
 }
 
-.sortButton:hover {
-    background-color: #5a0072; /* Slightly darker Maverick Purple on hover */
-    align-items: center;
-    gap: 10px;
-    width: 15vw;
-    min-width: 160px;
-}
 .rightLabels label {
     margin-left: -20px;
 }
