real time closing and toggle visibility, UI tweaks

--- a/src/app/components/navBar/navBar.module.css
+++ b/src/app/components/navBar/navBar.module.css
@@ -23,7 +23,7 @@
   .img{
     margin-left: 10%;
     height: 100%;
-    width: 192;
+    width: auto;
   }
   .profileSection{
     margin-left: auto;
