--- a/src/app/senate/dashboard/currentAgendas/currentAgendas.module.css
+++ b/src/app/senate/dashboard/currentAgendas/currentAgendas.module.css
@@ -38,13 +38,21 @@
     margin: 0 auto;
     width: 100%;
 }
-
+.pageChange{
+    display: flex;
+    margin-bottom: 10px;
+}
 .pageChange button{
     all: unset;
     font-size: 40px;
+    line-height: 1;
     text-align: start;
     border: 0;
-
+}
+.img{
+    width: 15px;
+    height: auto;
+    align-self: center;
 }
 .searchAddContainer {
     display: flex;
@@ -74,9 +82,6 @@
 .rightLabels label {
     margin-left: -20px;
 }
-
-
-
 .date{
     margin-right:5%;
     width: 10vw;
