--- a/src/app/senate/dashboard/pastAgendas/pastAgendas.module.css
+++ b/src/app/senate/dashboard/pastAgendas/pastAgendas.module.css
@@ -38,12 +38,21 @@
     margin: 0 auto;
     width: 100%;
 }
+.pageChange{
+    display: flex;
+    margin-bottom: 10px;
+}
 .pageChange button{
     all: unset;
     font-size: 40px;
     text-align: start;
     border: 0;
-
+    line-height: 1;
+}
+.img{
+    width: 15px;
+    height: auto;
+    align-self: center;
 }
 .searchAddContainer {
     display: flex;
@@ -67,8 +76,10 @@
 }
 .rightLabels{
     display: flex;
-    gap:12px;
-    margin-right: 75px;
+    align-items: center;
+    gap: 10px;
+    width: 15vw;
+    min-width: 160px;
 }
 
 .rightLabels label {
