linked clerk profile to sidebar

--- a/src/app/senate/dashboard/currentAgendas/currentAgendas.module.css
+++ b/src/app/senate/dashboard/currentAgendas/currentAgendas.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - 80px);
     width: 100vw;
     padding-left: 250px;
     transition: padding 0.3s ease-in-out;
