--- a/src/app/components/agendaSection/agendaSection.module.css
+++ b/src/app/components/agendaSection/agendaSection.module.css
@@ -1,7 +1,6 @@
 .section {
-  /* display: flex; */
   display: grid;
-  grid-template-columns: 8fr 1fr 1fr;
+  grid-template-columns: minmax(0, 8fr) 1fr 1fr;
   justify-content: space-between;
   align-items: center; /* Vertically aligns items */
   border-top: 1px solid #ece6e6; /* Divider at the top */
@@ -88,4 +87,3 @@
     display: none;
   }
 }
-
